--- a/index.html
+++ b/index.html
@@ -1,126 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    \
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Multi-step form</title>
+    <link rel="stylesheet" href="/style.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  <!-- Sidebar start -->
+    <title>Frontend Mentor | Multi-step form</title>
+  </head>
+  <body>
+    <main>
+      <!-- Sidebar start -->
+      <div>
+        <ul class="">
+          <li>
+            <span>Step 1</span> <br />
+            Your info
+          </li>
+          <li>
+            <span>Step 2</span> <br />
+            Select plan
+          </li>
+          <li>
+            <span>Step 3</span> <br />
+            Add-ons
+          </li>
+          <li>
+            <span>Step 4</span> <br />
+            Summary
+          </li>
+        </ul>
+      </div>
+      <!-- Sidebar end -->
 
-  Step 1
-  Your info
+      <section class="forms_wrapper"></section>
 
-  Step 2
-  Select plan
+      <!-- Step 1 start -->
 
-  Step 3
-  Add-ons
+      <div class="step1">
+        <div>
+          <h2>Personal info</h2>
+          <p>Provide your name, email address, and phone number</p>
+        </div>
+        <form action="">
+          <div class="forms_list">
+            <label for="name">Name</label>
+            <input
+              type="text"
+              id="name"
+              placeholder="e.g. Stephen King"
+              required
+            />
+            <span class="error-message">Name is required</span>
+          </div>
+          <div class="forms_list">
+            <label for="email">Email Address</label>
+            <input
+              type="email"
+              id="email"
+              placeholder="e.g. stephenking@lorem.com"
+              required
+            />
+            <span class="error-message">Email is required</span>
+          </div>
+          <div class="forms_list">
+            <label for="number">Phone Number</label>
+            <input
+              type="tel"
+              id="number"
+              placeholder="e.g. +1 234 567 890"
+              required
+            />
+            <span class="error-message">Number is required</span>
+          </div>
+          <div class="step1_btn">
+            <button type="button">Next Step</button>
+          </div>
+        </form>
+      </div>
 
-  Step 4
-  Summary
+      <!-- Step 1 end -->
 
-  <!-- Sidebar end -->
+      <!-- Step 2 start -->
 
-  <!-- Step 1 start -->
+      <div class="step2">
+        <div>
+          <h2> Select your plan</h2>
+          <p>You have the option of monthly or yearly billing.</p>
+        </div>
 
-  Personal info
-  Please provide your name, email address, and phone number.
+        <ul>
+          <li class="">
+            <div>
+              <img
+                class="step2_img"
+                src="/assets/images/icon-arcade.svg"
+                alt=""
+              />
+            </div>
+            <div>
+              <h5>Arcade</h5>
+              <span>$9/mo</span>
+            </div>
+          </li>
+          <li class="">
+            <div>
+              <img
+                class="step2_img"
+                src="/assets/images/icon-advanced.svg"
+                alt=""
+              />
+            </div>
+            <div>
+              <h5>Advanced</h5>
+              <span>$12/mo</span>
+            </div>
+          </li>
+          <li class="">
+            <div>
+              <img class="step2_img" src="/assets/images/icon-pro.svg" alt="" />
+            </div>
+            <div>
+              <h5>Pro</h5>
+              <span>$15/mo</span>
+            </div>
+          </li>
+        </ul>
 
-  Name
-  e.g. Stephen King
+        <div class="switch_wrapper">
+          <span>Monthly</span>
+          <label class="switch">
+            <input type="checkbox" />
+            <span class="slider"></span>
+          </label>
+          <span>Yearly</span>
+        </div>
+        <div class="step2_btn">
+          <button type="button">Back</button>
+          <button type="button">Next Step</button>
+        </div>
+      </div>
+      <!-- Step 2 end -->
 
-  Email Address
-  e.g. stephenking@lorem.com
+      <!-- Step 3 start -->
 
-  Phone Number
-  e.g. +1 234 567 890
+      Pick add-ons Add-ons help enhance your gaming experience. Online service
+      Access to multiplayer games +$1/mo Larger storage Extra 1TB of cloud save
+      +$2/mo Customizable Profile Custom theme on your profile +$2/mo Go Back
+      Next Step
 
-  Next Step
+      <!-- Step 3 end -->
 
-  <!-- Step 1 end -->
+      <!-- Step 4 start -->
 
-  <!-- Step 2 start -->
+      Finishing up Double-check everything looks OK before confirming.
 
-  Select your plan
-  You have the option of monthly or yearly billing.
+      <!-- Dynamically add subscription and add-on selections here -->
 
-  Arcade
-  $9/mo
+      Total (per month/year) Go Back Confirm
 
-  Advanced
-  $12/mo
+      <!-- Step 4 end -->
 
-  Pro
-  $15/mo
+      <!-- Step 5 start -->
 
-  Monthly
-  Yearly
+      Thank you! Thanks for confirming your subscription! We hope you have fun
+      using our platform. If you ever need support, please feel free to email us
+      at support@loremgaming.com.
 
-  Go Back
-  Next Step
+      <!-- Step 5 end -->
 
-  <!-- Step 2 end -->
-
-  <!-- Step 3 start -->
-
-  Pick add-ons
-  Add-ons help enhance your gaming experience.
-
-  Online service
-  Access to multiplayer games
-  +$1/mo
-
-  Larger storage
-  Extra 1TB of cloud save
-  +$2/mo
-
-  Customizable Profile
-  Custom theme on your profile
-  +$2/mo
-
-  Go Back
-  Next Step
-
-  <!-- Step 3 end -->
-
-  <!-- Step 4 start -->
-
-  Finishing up
-  Double-check everything looks OK before confirming.
-
-  <!-- Dynamically add subscription and add-on selections here -->
-
-  Total (per month/year)
-
-  Go Back
-  Confirm
-
-  <!-- Step 4 end -->
-
-  <!-- Step 5 start -->
-
-  Thank you!
-
-  Thanks for confirming your subscription! We hope you have fun 
-  using our platform. If you ever need support, please feel free 
-  to email us at support@loremgaming.com.
-
-  <!-- Step 5 end -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </main>
+  </body>
 </html>
