Added step3 HTML

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <span>Yearly</span>
         </div>
         <div class="step2_btn">
-          <button type="button">Back</button>
+          <button type="button">Go Back</button>
           <button type="button">Next Step</button>
         </div>
       </div>
@@ -153,11 +153,55 @@
 
       <!-- Step 3 start -->
 
-      Pick add-ons Add-ons help enhance your gaming experience. Online service
-      Access to multiplayer games +$1/mo Larger storage Extra 1TB of cloud save
-      +$2/mo Customizable Profile Custom theme on your profile +$2/mo Go Back
-      Next Step
+      <div class="step3">
+        <div>
+          <h2>Pick add-ons</h2>
+          <p>Add-ons help enhance your gaming experience.</p>
+        </div>
 
+        <ul>
+          <li class="">
+            <div>
+              <input type="checkbox" name="" id="">
+            </div>
+            <div>
+              <h5>Online service</h5>
+              <p>Access to multiplayer</p>
+            </div>
+            <div>
+              <span>+$1/mo</span>
+            </div>
+          </li>
+          <li class="">
+            <div>
+              <input type="checkbox" name="" id="">
+            </div>
+            <div>
+              <h5>Larger storage</h5>
+              <p>Extra 1TB of cloud save</p>
+            </div>
+            <div>
+              <span>+$2/mo</span>
+            </div>
+          </li>
+          <li class="">
+            <div>
+              <input type="checkbox" name="" id="">
+            </div>
+            <div>
+              <h5>Customizable Profile</h5>
+              <p>Custom theme on your profile</p>
+            </div>
+            <div>
+              <span>+$2/mo</span>
+            </div>
+          </li>
+        </ul>
+        <div class="step2_btn">
+          <button type="button">Go Back</button>
+          <button type="button">Next Step</button>
+        </div>
+      </div>
       <!-- Step 3 end -->
 
       <!-- Step 4 start -->
