Added step5 html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <div class="step2">
         <div>
-          <h2> Select your plan</h2>
+          <h2>Select your plan</h2>
           <p>You have the option of monthly or yearly billing.</p>
         </div>
 
@@ -162,7 +162,7 @@
         <ul>
           <li class="">
             <div>
-              <input type="checkbox" name="" id="">
+              <input type="checkbox" name="" id="" />
             </div>
             <div>
               <h5>Online service</h5>
@@ -174,7 +174,7 @@
           </li>
           <li class="">
             <div>
-              <input type="checkbox" name="" id="">
+              <input type="checkbox" name="" id="" />
             </div>
             <div>
               <h5>Larger storage</h5>
@@ -186,7 +186,7 @@
           </li>
           <li class="">
             <div>
-              <input type="checkbox" name="" id="">
+              <input type="checkbox" name="" id="" />
             </div>
             <div>
               <h5>Customizable Profile</h5>
@@ -206,19 +206,55 @@
 
       <!-- Step 4 start -->
 
-      Finishing up Double-check everything looks OK before confirming.
-
-      <!-- Dynamically add subscription and add-on selections here -->
-
-      Total (per month/year) Go Back Confirm
+      <div>
+        <div>
+          <h2>Finishing up</h2>
+          <p>Double-check everything looks OK before confirming.</p>
+        </div>
+        <!-- Dynamically add subscription and add-on selections here -->
+        <div class="summary_list">
+          <div class="">
+            <div>
+              <h5>Subscription</h5>
+              <a href="http://">Change</a>
+            </div>
+            <p>price</p>
+          </div>
+          <div class="">
+            <h5>Add-ons</h5>
+            <p>Online service</p>
+          </div>
+        </div>
+        <div class="summary_total">
+          <p>Total (per month/year): $15</p>
+        </div>
+        <div class="summary_btn">
+          <button type="button">Go Back</button>
+          <button type="submit">Confirm</button>
+        </div>
+        <!-- Total (per month/year) Go Back Confirm -->
+      </div>
 
       <!-- Step 4 end -->
 
       <!-- Step 5 start -->
 
-      Thank you! Thanks for confirming your subscription! We hope you have fun
-      using our platform. If you ever need support, please feel free to email us
-      at support@loremgaming.com.
+      <div>
+        <div class="step5_btn">
+          <img
+            src="/assets/images/icon-thank-you.svg"
+            alt=""
+            sizes=""
+            srcset=""
+          />
+        </div>
+        <h2>Thank you!</h2>
+        <p>
+          Thanks for confirming your subscription! We hope you have fun using
+          our platform. If you ever need support, please feel free to email us
+          at support@loremgaming.com.
+        </p>
+      </div>
 
       <!-- Step 5 end -->
 
