--- a/index.html
+++ b/index.html
@@ -3,267 +3,272 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-    \
-
     <link rel="stylesheet" href="/style.css" />
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | Multi-step form</title>
   </head>
   <body>
     <main>
-      <!-- Sidebar start -->
       <div>
-        <ul class="">
-          <li>
-            <span>Step 1</span> <br />
-            Your info
-          </li>
-          <li>
-            <span>Step 2</span> <br />
-            Select plan
-          </li>
-          <li>
-            <span>Step 3</span> <br />
-            Add-ons
-          </li>
-          <li>
-            <span>Step 4</span> <br />
-            Summary
-          </li>
-        </ul>
+        <a href="/text.html">Check Image</a>
       </div>
-      <!-- Sidebar end -->
-
-      <section class="forms_wrapper"></section>
-
-      <!-- Step 1 start -->
-
-      <div class="step1">
-        <div>
-          <h2>Personal info</h2>
-          <p>Provide your name, email address, and phone number</p>
+      <div class="content_wrapper">
+        <!-- Sidebar start -->
+        <div class="sidebar">
+          <ul class="sidebar_lists">
+            <li>
+              <span>1</span>
+              <div>
+                <span>Step 1</span> <br />
+                Your info
+              </div>
+            </li>
+            <li>
+              <span>2</span>
+              <div>
+                <span>Step 2</span> <br />
+                Select plan
+              </div>
+            </li>
+            <li>
+              <span>3</span>
+              <div>
+                <span>Step 3</span> <br />
+                Add-ons
+              </div>
+            </li>
+            <li>
+              <span>4</span>
+              <div>
+                <span>Step 4</span> <br />
+                Summary
+              </div>
+            </li>
+          </ul>
         </div>
-        <form action="">
-          <div class="forms_list">
-            <label for="name">Name</label>
-            <input
-              type="text"
-              id="name"
-              placeholder="e.g. Stephen King"
-              required
-            />
-            <span class="error-message">Name is required</span>
-          </div>
-          <div class="forms_list">
-            <label for="email">Email Address</label>
-            <input
-              type="email"
-              id="email"
-              placeholder="e.g. stephenking@lorem.com"
-              required
-            />
-            <span class="error-message">Email is required</span>
-          </div>
-          <div class="forms_list">
-            <label for="number">Phone Number</label>
-            <input
-              type="tel"
-              id="number"
-              placeholder="e.g. +1 234 567 890"
-              required
-            />
-            <span class="error-message">Number is required</span>
-          </div>
-          <div class="step1_btn">
-            <button type="button">Next Step</button>
-          </div>
-        </form>
-      </div>
+        <!-- Sidebar end -->
 
-      <!-- Step 1 end -->
-
-      <!-- Step 2 start -->
-
-      <div class="step2">
-        <div>
-          <h2>Select your plan</h2>
-          <p>You have the option of monthly or yearly billing.</p>
-        </div>
-
-        <ul>
-          <li class="">
+        <section class="forms_wrapper">
+          <!-- Step 1 start -->
+          <div class="step1">
             <div>
+              <h2>Personal info</h2>
+              <p>Provide your name, email address, and phone number</p>
+            </div>
+            <form id="form-step1">
+              <div class="forms_list">
+                <label for="name">Name</label>
+                <input
+                  type="text"
+                  id="name"
+                  placeholder="e.g. Stephen King"
+                  required
+                />
+                <span class="error-message" id="error-name">Name is required</span>
+              </div>
+              <div class="forms_list">
+                <label for="email">Email Address</label>
+                <input
+                  type="email"
+                  id="email"
+                  placeholder="e.g. stephenking@lorem.com"
+                  required
+                />
+                <span class="error-message" id="error-email">Email is required</span>
+              </div>
+              <div class="forms_list">
+                <label for="number">Phone Number</label>
+                <input
+                  type="tel"
+                  id="number"
+                  placeholder="e.g. +1 234 567 890"
+                  required
+                />
+                <span class="error-message" id="error-number">Number is required</span>
+              </div>
+              <div class="step1_btn">
+                <button id="next1" type="button">Next Step</button>
+              </div>
+            </form>
+          </div>
+          <!-- Step 1 end -->
+
+          <!-- Step 2 start -->
+          <div class="step2 hide">
+            <div>
+              <h2>Select your plan</h2>
+              <p>You have the option of monthly or yearly billing.</p>
+            </div>
+
+            <ul>
+              <li>
+                <div>
+                  <img
+                    class="step2_img"
+                    src="/assets/images/icon-arcade.svg"
+                    alt="Arcade"
+                  />
+                </div>
+                <div>
+                  <h5>Arcade</h5>
+                  <span>$9/mo</span>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <img
+                    class="step2_img"
+                    src="/assets/images/icon-advanced.svg"
+                    alt="Advanced"
+                  />
+                </div>
+                <div>
+                  <h5>Advanced</h5>
+                  <span>$12/mo</span>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <img
+                    class="step2_img"
+                    src="/assets/images/icon-pro.svg"
+                    alt="Pro"
+                  />
+                </div>
+                <div>
+                  <h5>Pro</h5>
+                  <span>$15/mo</span>
+                </div>
+              </li>
+            </ul>
+
+            <div class="switch_wrapper">
+              <span>Monthly</span>
+              <label class="switch">
+                <input type="checkbox" />
+                <span class="slider"></span>
+              </label>
+              <span>Yearly</span>
+            </div>
+            <div class="step2_btn">
+              <button type="button" id="back2">Go Back</button>
+              <button type="button" id="next2">Next Step</button>
+            </div>
+          </div>
+          <!-- Step 2 end -->
+
+          <!-- Step 3 start -->
+          <div class="step3 hide">
+            <div>
+              <h2>Pick add-ons</h2>
+              <p>Add-ons help enhance your gaming experience.</p>
+            </div>
+
+            <ul>
+              <li>
+                <div>
+                  <input type="checkbox" name="addon1" id="addon1" />
+                </div>
+                <div>
+                  <h5>Online service</h5>
+                  <p>Access to multiplayer games</p>
+                </div>
+                <div>
+                  <span>+$1/mo</span>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <input type="checkbox" name="addon2" id="addon2" />
+                </div>
+                <div>
+                  <h5>Larger storage</h5>
+                  <p>Extra 1TB of cloud save</p>
+                </div>
+                <div>
+                  <span>+$2/mo</span>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <input type="checkbox" name="addon3" id="addon3" />
+                </div>
+                <div>
+                  <h5>Customizable Profile</h5>
+                  <p>Custom theme on your profile</p>
+                </div>
+                <div>
+                  <span>+$2/mo</span>
+                </div>
+              </li>
+            </ul>
+            <div class="step3_btn">
+              <button type="button" id="back3">Go Back</button>
+              <button type="button" id="next3">Next Step</button>
+            </div>
+          </div>
+          <!-- Step 3 end -->
+
+          <!-- Step 4 start -->
+          <div class="step4 hide">
+            <div>
+              <h2>Finishing up</h2>
+              <p>Double-check everything looks OK before confirming.</p>
+            </div>
+            <div class="summary_list">
+              <div class="">
+                <div>
+                  <h5>Subscription</h5>
+                  <a href="#">Change</a>
+                </div>
+                <p>price</p>
+              </div>
+              <div class="">
+                <h5>Add-ons</h5>
+                <p>Online service</p>
+              </div>
+            </div>
+            <div class="summary_total">
+              <p>Total (per month/year): $15</p>
+            </div>
+            <div class="summary_btn">
+              <button type="button" id="back4">Go Back</button>
+              <button type="submit" id="confirm">Confirm</button>
+            </div>
+          </div>
+          <!-- Step 4 end -->
+
+          <!-- Step 5 start -->
+          <div class="step5 hide">
+            <div class="step5_btn">
               <img
-                class="step2_img"
-                src="/assets/images/icon-arcade.svg"
-                alt=""
+                src="/assets/images/icon-thank-you.svg"
+                alt="Thank you icon"
               />
             </div>
-            <div>
-              <h5>Arcade</h5>
-              <span>$9/mo</span>
-            </div>
-          </li>
-          <li class="">
-            <div>
-              <img
-                class="step2_img"
-                src="/assets/images/icon-advanced.svg"
-                alt=""
-              />
-            </div>
-            <div>
-              <h5>Advanced</h5>
-              <span>$12/mo</span>
-            </div>
-          </li>
-          <li class="">
-            <div>
-              <img class="step2_img" src="/assets/images/icon-pro.svg" alt="" />
-            </div>
-            <div>
-              <h5>Pro</h5>
-              <span>$15/mo</span>
-            </div>
-          </li>
-        </ul>
-
-        <div class="switch_wrapper">
-          <span>Monthly</span>
-          <label class="switch">
-            <input type="checkbox" />
-            <span class="slider"></span>
-          </label>
-          <span>Yearly</span>
-        </div>
-        <div class="step2_btn">
-          <button type="button">Go Back</button>
-          <button type="button">Next Step</button>
-        </div>
-      </div>
-      <!-- Step 2 end -->
-
-      <!-- Step 3 start -->
-
-      <div class="step3">
-        <div>
-          <h2>Pick add-ons</h2>
-          <p>Add-ons help enhance your gaming experience.</p>
-        </div>
-
-        <ul>
-          <li class="">
-            <div>
-              <input type="checkbox" name="" id="" />
-            </div>
-            <div>
-              <h5>Online service</h5>
-              <p>Access to multiplayer</p>
-            </div>
-            <div>
-              <span>+$1/mo</span>
-            </div>
-          </li>
-          <li class="">
-            <div>
-              <input type="checkbox" name="" id="" />
-            </div>
-            <div>
-              <h5>Larger storage</h5>
-              <p>Extra 1TB of cloud save</p>
-            </div>
-            <div>
-              <span>+$2/mo</span>
-            </div>
-          </li>
-          <li class="">
-            <div>
-              <input type="checkbox" name="" id="" />
-            </div>
-            <div>
-              <h5>Customizable Profile</h5>
-              <p>Custom theme on your profile</p>
-            </div>
-            <div>
-              <span>+$2/mo</span>
-            </div>
-          </li>
-        </ul>
-        <div class="step2_btn">
-          <button type="button">Go Back</button>
-          <button type="button">Next Step</button>
-        </div>
-      </div>
-      <!-- Step 3 end -->
-
-      <!-- Step 4 start -->
-
-      <div>
-        <div>
-          <h2>Finishing up</h2>
-          <p>Double-check everything looks OK before confirming.</p>
-        </div>
-        <!-- Dynamically add subscription and add-on selections here -->
-        <div class="summary_list">
-          <div class="">
-            <div>
-              <h5>Subscription</h5>
-              <a href="http://">Change</a>
-            </div>
-            <p>price</p>
+            <h2>Thank you!</h2>
+            <p>
+              Thanks for confirming your subscription! We hope you have fun
+              using our platform. If you ever need support, please feel free to
+              email us at support@loremgaming.com.
+            </p>
           </div>
-          <div class="">
-            <h5>Add-ons</h5>
-            <p>Online service</p>
-          </div>
-        </div>
-        <div class="summary_total">
-          <p>Total (per month/year): $15</p>
-        </div>
-        <div class="summary_btn">
-          <button type="button">Go Back</button>
-          <button type="submit">Confirm</button>
-        </div>
-        <!-- Total (per month/year) Go Back Confirm -->
+          <!-- Step 5 end -->
+        </section>
       </div>
 
-      <!-- Step 4 end -->
-
-      <!-- Step 5 start -->
-
-      <div>
-        <div class="step5_btn">
-          <img
-            src="/assets/images/icon-thank-you.svg"
-            alt=""
-            sizes=""
-            srcset=""
-          />
-        </div>
-        <h2>Thank you!</h2>
-        <p>
-          Thanks for confirming your subscription! We hope you have fun using
-          our platform. If you ever need support, please feel free to email us
-          at support@loremgaming.com.
-        </p>
-      </div>
-
-      <!-- Step 5 end -->
-
+      <!-- Footer start -->
       <div class="attribution">
         Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Awoyemi Patrick Gbenga</a>.
       </div>
+      <!-- Footer end -->
     </main>
   </body>
 </html>
