Navigation between steps and validation (JS)

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                   placeholder="e.g. Stephen King"
                   required
                 />
-                <span class="error-message" id="error-name">Name is required</span>
+                <span class="error-message" id="error-name"
+                  >Name is required</span
+                >
               </div>
               <div class="forms_list">
                 <label for="email">Email Address</label>
@@ -79,7 +81,9 @@
                   placeholder="e.g. stephenking@lorem.com"
                   required
                 />
-                <span class="error-message" id="error-email">Email is required</span>
+                <span class="error-message" id="error-email"
+                  >Email is required</span
+                >
               </div>
               <div class="forms_list">
                 <label for="number">Phone Number</label>
@@ -89,7 +93,9 @@
                   placeholder="e.g. +1 234 567 890"
                   required
                 />
-                <span class="error-message" id="error-number">Number is required</span>
+                <span class="error-message" id="error-number"
+                  >Number is required</span
+                >
               </div>
               <div class="step1_btn">
                 <button id="next1" type="button">Next Step</button>
@@ -265,10 +271,13 @@
       <!-- Footer start -->
       <div class="attribution">
         Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Awoyemi Patrick Gbenga</a>.
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Awoyemi Patrick Gbenga</a>.
       </div>
       <!-- Footer end -->
+
+      <script src="/script.js"></script>
     </main>
   </body>
 </html>
